# TSMX_desafio

./: README.md  pyproject.toml  relatorio_importacao.txt
dataset/: ScriptTabelas.sql
src/: ETL.py  requiriments.txt  teste.py
