[tool.poetry]
name = "tsmx"
version = "0.1.0"
description = ""
authors = ["Maxwilliam <maxwilliamgomess@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
dotenv = "^0.9.9"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
